# Doodle

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  psuedo.code  temp.txt
res/config/: defaults.config
res/config/logistics/: splitter.config
src/: DEFINITIONS.hpp  app.cpp  app.hpp  main.cpp
src/entities/: entity.hpp  handler.cpp  handler.hpp  production.cpp  production.hpp
src/game/: game.cpp  game.hpp
src/game/entities/: entity.hpp  handler.cpp  handler.hpp
src/game/handler/: handler.cpp  handler.hpp
src/game/platform/: platform.cpp  platform.hpp
src/game/player/: player.cpp  player.hpp
src/game/ui/: handler.cpp  handler.hpp  selector.hpp
src/menu/: menu.cpp  menu.hpp
src/over/: over.cpp  over.hpp
src/ui/: handler.cpp  handler.hpp
